--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "ODUU - Ethio News",
+  "name": "ODEESSA - Ethio News",
   "short_name": "ODUU",
   "start_url": "./index.html",
   "display": "standalone",
